Add bulk deletion functionality for sales and sales returns. Implement deleteAllById methods in SaleService and SaleReturnService to handle multiple deletions, including stock adjustments and validation of IDs. Update SaleController and SaleReturnController to expose new endpoints for bulk deletion, enhancing the management of sales and returns.